# nwm-msw-mgr

./: .gitignore  Dockerfile.mswm  README.md  pyproject.toml  requirements.txt  setup.py  troute_output_201510010000.nc
.github/workflows/: test.yml
src/mswm/: build_inputs.py  edit_config.py  manager.py
src/mswm/cal_utils/: ginputfunc.py
src/mswm/example_inputs/calibration/: input_calibration.config
src/mswm/example_inputs/default/: input_default.config
src/mswm/example_inputs/forecast/: input_forecast.config
src/mswm/example_inputs/regionalization/: input_regionalization.config
src/mswm/example_inputs/regionalization/01123000/: catchment_groups.csv  formulation_assignment.csv  grp1_catchments.csv  grp2_catchments.csv
src/mswm/fcst_utils/: process_forcing.py  update_bmi_config.py
src/mswm/module_parameter_files/lasam/: lasam_soil_class.txt
src/mswm/module_parameter_files/lstm/trained_neuralhydrology_models/nh_AORC_hourly_slope_elev_precip_temp_seq999_seed101_2801_191806/: config.yml
src/mswm/module_parameter_files/ueb/: watershed_onecell.nc
src/mswm/utils/: ginputfunc.py  input_configuration.py  log_level.py  nwm_output_variables.py  process_forcing.py  settings.py  update_bmi_config.py
src/nwm_msw_mgr/: build_inputs.py  edit_config.py  manager.py
src/nwm_msw_mgr/example_inputs/calibration/: input_calibration.config
src/nwm_msw_mgr/example_inputs/default/: input_default.config
src/nwm_msw_mgr/example_inputs/regionalization/: input_regionalization.config
src/nwm_msw_mgr/example_inputs/regionalization/01123000/: .~lock.formulation_assignment.csv#  formulation_assignment.csv
src/nwm_msw_mgr/utils/: ginputfunc.py  input_configuration.py  log_level.py  process_forcing.py
tests/: conftest.py  test_calibration.py  test_cli.py  test_forecast.py  test_regionalization.py
tests/data/calib_params/: calib_params_cfe-s.csv  calib_params_noah-owp-modular.csv
tests/data/forcing_configs/: aorc_config.yml  cold_start_config.yml  medium_range_mem2_config.yml  short_range_config.yml  standard_ana_config.yml
tests/data/hydrofabric/: hydrofabric.gpkg  hydrofabric_nhf.gpkg
tests/data/regionalization/: catchment_groups.csv  formulation_assignment.csv
