[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mswm"
version = "0.1.1"           # or mark as dynamic if you use setuptools-scm
requires-python = ">=3.10"
dependencies = [
  "geopandas~=1.1.1",
  "pandas~=2.3.1",
  "netCDF4~=1.7.2",
  "pydantic~=2.11.7",
  "PyYAML~=6.0.2",
  "numpy>=1.24,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
