[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mswm"
version = "0.1.1"           # or mark as dynamic if you use setuptools-scm
requires-python = ">=3.11"
dependencies = [
  "geopandas~=1.1.1",             # Match ngen-forcing
  "shapely~=2.1.2",               # Match ngen-forcing
  "fiona~=1.10.1",                # Match ngen-forcing
  "pyproj>=3.2.0,<4.0.0",         # Match ngen-forcing
  "pandas~=2.3.3",                # Match ngen-forcing
  "netCDF4~=1.6.3",               # Match ngen-forcing
  "pydantic~=2.11.9",
  "PyYAML~=6.0.2",                # Match ngen-forcing
  "numpy~=1.26.4",                # Match ngen-forcing
]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mswm.module_parameter_files" = ["**/*"]
